test/parse/expr/bad-const-i32-just-negative-sign.txt
;;; ERROR: 1
(module
  (func (i32.const -)))
(;; STDERR ;;;
parse/expr/bad-const-i32-just-negative-sign.txt:3:20: unexpected token "-"
  (func (i32.const -)))
                   ^
parse/expr/bad-const-i32-just-negative-sign.txt:3:21: syntax error, unexpected ), expecting NAT or INT or FLOAT
  (func (i32.const -)))
                    ^
;;; STDERR ;;)
